--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "test": "xss-scan",
+    "css": "tailwindcss -i styles.css -o public/styles.css"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/debug": "^4.1.12",
@@ -14,7 +18,9 @@
   "dependencies": {
     "@kitajs/html": "^4.2.10",
     "@kitajs/ts-html-plugin": "^4.1.3",
+    "@tailwindcss/cli": "^4.1.13",
     "debug": "^4.4.3",
-    "mime": "^4.1.0"
+    "mime": "^4.1.0",
+    "tailwindcss": "^4.1.13"
   }
 }
