--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,8 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 # Finder (MacOS) folder config
 .DS_Store
 
+# Build output
+public/styles.css
+
 # App data
 /data
