--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@kitajs/html": "^4.2.10",
     "@kitajs/ts-html-plugin": "^4.1.3",
     "@tailwindcss/cli": "^4.1.13",
+    "daisyui": "^5.1.18",
     "debug": "^4.4.3",
     "mime": "^4.1.0",
     "tailwindcss": "^4.1.13"
