--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "umbrel-blossom",
+  "name": "umbrel-blob-box",
+  "version": "0.1.0",
   "module": "index.ts",
   "type": "module",
   "private": true,
@@ -10,7 +11,6 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/debug": "^4.1.12",
     "prettier": "^3.6.2"
   },
   "peerDependencies": {
@@ -21,7 +21,6 @@
     "@kitajs/ts-html-plugin": "^4.1.3",
     "@tailwindcss/cli": "^4.1.13",
     "daisyui": "^5.1.18",
-    "debug": "^4.4.3",
     "mime": "^4.1.0",
     "tailwindcss": "^4.1.13"
   }
