--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/cli": "^4.1.13",
     "daisyui": "^5.1.18",
     "mime": "^4.1.0",
+    "nostr-tools": "^2.17.0",
     "tailwindcss": "^4.1.13"
   }
 }
